--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -167,7 +167,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
-                                >
+                                android:layout_marginTop="3dp">
                                 <Button
                                     android:id="@+id/btn_first_place_bet"
                                     android:layout_width="wrap_content"
@@ -181,6 +181,7 @@
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
+                                   android:layout_marginTop="5dp"
                                    android:weightSum="4">
                                    <TextView
                                        android:layout_width="0dp"
@@ -303,7 +304,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    >
+                    android:layout_marginTop="3dp" >
                     <Button
                         android:id="@+id/btn_second_place_bet"
                         android:layout_width="wrap_content"
@@ -316,7 +317,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="4">
+                        android:weightSum="4"
+                        android:layout_marginTop="5dp">
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -439,7 +441,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_marginTop="3dp">
                     <Button
                         android:id="@+id/btn_jodi_place_bet"
                         android:layout_width="wrap_content"
@@ -453,7 +456,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="4">
+                        android:weightSum="4"
+                        android:layout_marginTop="5dp">
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
