--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <shape>
-            <gradient
-                android:startColor="#8b9dc3"
-                android:endColor="#8b9dc3"
-                android:angle="270"/>
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+android:thickness="1dp"
+android:shape="rectangle">
+<stroke android:width="1dp"
+    android:color="#000"/>
+<corners android:radius="5dp" />
+<gradient
+    android:startColor="#8b9dc3"
+    android:endColor="#8b9dc3"
+    android:type="linear"
+    android:angle="270"/>
+</shape>
