--- a/app/src/main/res/layout-v11/activity_splash.xml
+++ b/app/src/main/res/layout-v11/activity_splash.xml
@@ -5,7 +5,8 @@
 
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/splashscreen"/>
+        android:src="@drawable/new_icon"
+        android:layout_centerInParent="true" />
 </RelativeLayout>
