--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_height="280dp"
     android:background="@drawable/edit_text_border"
     android:padding="10dp">
 
@@ -69,10 +69,6 @@
         android:gravity="center"/>
 
     </android.support.v7.widget.CardView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/textColor"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -85,7 +81,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:text=""
             android:hint="game"
             android:textColor="#c99802"
@@ -99,7 +95,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.7"
         android:text=""
         android:hint="Odds"
         android:textColor="#000"
@@ -135,7 +131,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp">
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Cancel"
         android:id="@+id/btnCancel"
@@ -144,7 +140,7 @@
         android:layout_gravity="center_horizontal" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Place Bet"
         android:id="@+id/btnPlaceBet"
