--- a/app/src/main/res/layout/fragment_cricket_dashboard.xml
+++ b/app/src/main/res/layout/fragment_cricket_dashboard.xml
@@ -53,7 +53,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Today's History"
+                    android:text="Today's Summary"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textSize="16sp"
@@ -128,7 +128,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Matches"
+                    android:text="Upcoming"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textSize="16sp"
