--- a/app/src/main/res/menu/acitivty_mainpage_drawer.xml
+++ b/app/src/main/res/menu/acitivty_mainpage_drawer.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/today_history"
             android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Today's History" />
+            android:title="Today's Summary" />
         <item
             android:id="@+id/my_accounts"
             android:icon="@android:drawable/ic_menu_gallery"
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/upcoming_matches"
             android:icon="@android:drawable/ic_menu_manage"
-            android:title="Matches" />
+            android:title="Upcoming" />
 
         <item
             android:id="@+id/cancel_bet"
