--- a/app/src/main/res/layout/fragment_multiple__bet.xml
+++ b/app/src/main/res/layout/fragment_multiple__bet.xml
@@ -125,6 +125,7 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             tools:ignore="NewApi"
+            android:layout_marginTop="5dp"
             android:padding="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -377,6 +378,7 @@
                     android:layout_height="40dp"
                     android:text="Place Bet"
                     android:textColor="#fff"
+                    android:layout_marginTop="3dp"
                     android:background="@drawable/button_border"
                     android:layout_marginBottom="4dp"
                     android:layout_gravity="center"/>
@@ -430,6 +432,7 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             tools:ignore="NewApi"
+            android:layout_marginTop="5dp"
             android:padding="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -686,6 +689,7 @@
                     android:layout_height="40dp"
                     android:text="Place Bet"
                     android:textColor="#fff"
+                    android:layout_marginTop="3dp"
                     android:layout_marginBottom="4dp"
                     android:background="@drawable/button_border"
                     android:layout_gravity="center"/>
@@ -736,6 +740,7 @@
             card_view:cardUseCompatPadding="true"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
+            android:layout_marginTop="5dp"
             tools:ignore="NewApi">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -1023,6 +1028,7 @@
                         android:text="AutoFill"
                         android:gravity="center"
                         android:textColor="#fff"
+                        android:layout_marginLeft="2dp"
                         android:layout_marginBottom="4dp"
                         android:background="@drawable/button_border"
                         android:layout_gravity="center"/>
@@ -1036,6 +1042,7 @@
                         android:textColor="#fff"
                         android:layout_marginBottom="4dp"
                         android:layout_marginLeft="4dp"
+                        android:layout_marginRight="2dp"
                         android:background="@drawable/button_border"
                         android:layout_gravity="center"/>
                 </LinearLayout>
