--- a/app/src/main/res/layout/content_play_details.xml
+++ b/app/src/main/res/layout/content_play_details.xml
@@ -62,7 +62,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center_horizontal"
                     android:textSize="18sp"
-                    android:text=""
+                    android:text="Match about to start"
                     android:textColor="#fff"
                     android:id="@+id/txtScore" />
 
