--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -130,6 +130,7 @@
                 card_view:cardUseCompatPadding="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
+                android:layout_marginTop="4dp"
                 tools:ignore="NewApi">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -139,6 +140,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
+                                android:layout_marginTop="2dp"
                                 android:weightSum="2"
                                 >
                                 <EditText
@@ -267,6 +269,7 @@
             card_view:cardUseCompatPadding="true"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
+            android:layout_marginTop="4dp"
             tools:ignore="NewApi">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -276,6 +279,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:layout_marginTop="2dp"
                     android:weightSum="2"
                     >
                     <EditText
@@ -403,6 +407,7 @@
             card_view:cardCornerRadius="4dp"
             card_view:cardElevation="2dp"
             card_view:cardUseCompatPadding="true"
+            android:layout_marginTop="4dp"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             tools:ignore="NewApi">
@@ -415,6 +420,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="2"
+                    android:layout_marginTop="2dp"
                     >
                     <EditText
                         android:id="@+id/edit_jodi_digit"
