--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -41,14 +41,14 @@
             android:id="@+id/profile"
             android:icon="@android:drawable/ic_menu_view"
             android:title="Profile" />
-        <item
+        <!--<item
             android:id="@+id/terms"
             android:icon="@android:drawable/ic_menu_manage"
             android:title="Term and Condition" />
         <item
             android:id="@+id/logout"
             android:icon="@android:drawable/ic_menu_zoom"
-            android:title="Logout" />
+            android:title="Logout" />-->
     </group>
 
     <!--<item android:title="Communicate">
