--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="300dp"
-    android:layout_height="280dp"
-    android:background="@drawable/edit_text_border"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#fff"
     android:padding="10dp">
 
     <android.support.v7.widget.CardView
@@ -56,7 +56,7 @@
         card_view:cardUseCompatPadding="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
-        card_view:cardBackgroundColor="#fff"
+        card_view:cardBackgroundColor="#dedede"
         >
     <TextView
         android:layout_width="match_parent"
