--- a/app/src/main/res/layout/child_match_bet.xml
+++ b/app/src/main/res/layout/child_match_bet.xml
@@ -23,7 +23,7 @@
     <View
         android:layout_width="0.5dp"
         android:layout_height="match_parent"
-        android:background="#2e3547"/>
+        android:background="#dedede"/>
 
     <TextView
         android:layout_width="0dp"
