--- a/app/src/main/res/layout/content_result_chart.xml
+++ b/app/src/main/res/layout/content_result_chart.xml
@@ -1219,7 +1219,7 @@
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
                     android:background="@color/textColor"/>
-        <TextView
+      <!--  <TextView
             android:id="@+id/text_view2"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
@@ -1566,13 +1566,13 @@
         <View
             android:layout_width="0.1dp"
             android:layout_height="match_parent"
-            android:background="@color/textColor"/>
+            android:background="@color/textColor"/>-->
         <TextView
             android:id="@+id/text_view31"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="30"
+            android:text="30/02"
             android:gravity="center"
             android:textColor="@color/textColor"/>
                 <View
