--- a/app/src/main/res/layout/child_chart_result.xml
+++ b/app/src/main/res/layout/child_chart_result.xml
@@ -18,7 +18,7 @@
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/textColor"/>-->
-        <TextView
+        <!--<TextView
             android:id="@+id/text_view2"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
@@ -336,7 +336,7 @@
         <View
             android:layout_width="0.1dp"
             android:layout_height="match_parent"
-            android:background="@color/textColor"/>
+            android:background="@color/textColor"/>-->
         <TextView
             android:id="@+id/text_view31"
             android:layout_width="30dp"
