--- a/app/src/main/res/layout/activity_container_score_card.xml
+++ b/app/src/main/res/layout/activity_container_score_card.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="bidding.example.com.bidding.UpcomingList">
+    tools:context="bidding.example.com.bidding.Container_score_card">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_upcoming_list" />
-
+    <include layout="@layout/content_container_score_card" />
 
 </android.support.design.widget.CoordinatorLayout>
