--- a/app/src/main/res/layout/content_upcoming_list.xml
+++ b/app/src/main/res/layout/content_upcoming_list.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="300dp"
+    android:layout_height="300dp"
+    android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="bidding.example.com.bidding.UpcomingList"
@@ -18,14 +18,16 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8"
+        android:layout_weight="0.7"
         android:id="@+id/listmatch" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="0.1"
+        android:layout_weight="0.2"
         android:text="Ok"
         android:id="@+id/btnOk"
+        android:textColor="#fff"
+        android:background="@drawable/button_border"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
