--- a/app/src/main/res/layout/fragment_upcoming_matches.xml
+++ b/app/src/main/res/layout/fragment_upcoming_matches.xml
@@ -10,5 +10,6 @@
 <CalendarView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/upcomingCalendar"></CalendarView>
+    android:id="@+id/upcomingCalendar"
+    ></CalendarView>
 </FrameLayout>
