--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="textColor">#000</color>
     <color name="textColorWhite">#fff</color>
-
+    <color name="red">#ff0000</color>
     <color name="card_header">#2196F3</color>
     <color name="card_body">#64B5F6</color>
     <color name="card_footer">#42A5F5</color>
