--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="#fff"
     android:padding="10dp">
 
@@ -110,7 +110,8 @@
         android:layout_weight="1"
         android:id="@+id/editBet"
         android:textColor="#000"
-        android:layout_gravity="right" />
+        android:layout_gravity="right"
+        android:inputType="number"/>
 
     </LinearLayout>
     <TextView
