--- a/app/src/main/res/layout/child_cricket_transaction.xml
+++ b/app/src/main/res/layout/child_cricket_transaction.xml
@@ -10,11 +10,8 @@
         android:layout_weight="1"
         android:singleLine="true"
         android:textColor="@color/textColor"
+        android:layout_gravity="center"
         android:gravity="center"/>
-    <View
-        android:layout_width="0.01dp"
-        android:layout_height="match_parent"
-        android:background="@color/material_blue_grey_800"/>
 
     <TextView
         android:id="@+id/odd"
@@ -23,11 +20,9 @@
         android:layout_weight="1"
         android:singleLine="true"
         android:textColor="@color/textColor"
+        android:layout_gravity="center"
         android:gravity="center"/>
-    <View
-        android:layout_width="0.01dp"
-        android:layout_height="match_parent"
-        android:background="@color/material_blue_grey_800"/>
+
 
     <TextView
         android:id="@+id/chip"
@@ -36,5 +31,6 @@
         android:layout_weight="1"
         android:singleLine="true"
         android:textColor="@color/textColor"
+        android:layout_gravity="center"
         android:gravity="center"/>
 </LinearLayout>
