--- a/app/src/main/res/layout/child_match_list.xml
+++ b/app/src/main/res/layout/child_match_list.xml
@@ -12,7 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="1.7">
+        android:layout_weight="1.7"
+        android:layout_gravity="center">
 
     <TextView
         android:layout_width="match_parent"
@@ -21,19 +22,22 @@
         android:hint="Name"
         android:id="@+id/txtname"
         android:textSize="16dp"
-        android:textColor="#000"/>
+        android:textColor="#000"
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
         android:hint="date"
-        android:id="@+id/txttime"/>
+        android:id="@+id/txttime"
+        android:layout_gravity="center"/>
     </LinearLayout>
 
     <ImageView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:id="@+id/green_dot"
-        android:layout_weight="0.3" />
+        android:layout_weight="0.3"
+        android:layout_gravity="center" />
 </LinearLayout>
