--- a/app/src/main/res/layout/content_match_score_card.xml
+++ b/app/src/main/res/layout/content_match_score_card.xml
@@ -65,7 +65,8 @@
             android:textColor="#3b5998"
             android:textSize="16dp"
             android:layout_marginTop="5dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"/>
         </android.support.v7.widget.CardView>
     <ScrollView
         android:layout_width="match_parent"
