--- a/app/src/main/res/layout/today_summary_child.xml
+++ b/app/src/main/res/layout/today_summary_child.xml
@@ -18,11 +18,10 @@
             android:layout_weight="1"
             android:textColor="@color/textColor"
             android:paddingLeft="5dp"
-            android:gravity="center"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
-
-
+            android:layout_marginBottom="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/transactionNo"
@@ -34,14 +33,9 @@
             android:paddingLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:visibility="gone"/>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.01"
-            android:background="@color/textColor"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/transactionAmt"
@@ -51,6 +45,7 @@
             android:layout_weight="1"
             android:textColor="@color/textColor"
             android:paddingLeft="5dp"
+            android:layout_gravity="center"
             android:gravity="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"/>
@@ -63,6 +58,7 @@
             android:singleLine="true"
             android:layout_weight="1"
             android:textColor="@color/textColor"
+            android:layout_gravity="center"
             android:gravity="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"/>
