--- a/app/src/main/res/layout/transaction_child.xml
+++ b/app/src/main/res/layout/transaction_child.xml
@@ -19,13 +19,10 @@
             android:textColor="@color/textColor"
             android:paddingLeft="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.01"
-            android:background="@color/textColor"/>
 
         <TextView
             android:id="@+id/chip"
@@ -37,14 +34,9 @@
             android:paddingLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            />
+            android:layout_gravity="center"
+            android:gravity="center" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.01"
-            android:background="@color/textColor"
-            />
 
         <TextView
             android:id="@+id/payout"
@@ -55,7 +47,9 @@
             android:textColor="@color/textColor"
             android:paddingLeft="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"/>
 
 
 
