--- a/app/src/main/res/layout/content_play_details.xml
+++ b/app/src/main/res/layout/content_play_details.xml
@@ -152,12 +152,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/cncl"
                 android:scaleType="fitXY"
                 android:background="#8b9dc3"
-                android:src="@drawable/rsz_more_game" />
+                android:src="@drawable/images"
+                android:layout_alignParentRight="true"/>
 
             <RelativeLayout
                 android:id="@+id/list_layout"
