--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="280dp"
     android:background="#fff"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
