--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="280dp"
+    android:layout_height="wrap_content"
     android:background="#fff"
     android:padding="5dp">
 
@@ -21,7 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="2dp">
 
         <TextView
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
         android:text="Mumbai Vs Pune"
         android:id="@+id/textmatch"
         android:layout_alignParentTop="true"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textColor="#fff"
         android:gravity="center" />
 
@@ -40,7 +41,7 @@
         android:id="@+id/textdate"
         android:hint=""
         android:textColor="#fff"
-        android:layout_marginTop="10dp"
+        android:padding="5dp"
         android:gravity="center"/>
 
             </LinearLayout>
@@ -64,7 +65,7 @@
         android:text=""
         android:hint="heading"
         android:id="@+id/textHeading"
-        android:layout_marginTop="10dp"
+        android:padding="5dp"
         android:textColor="#000"
         android:gravity="center"/>
 
@@ -130,7 +131,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp">
     <Button
         android:layout_width="100dp"
         android:layout_height="wrap_content"
