--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,33 +1,22 @@
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#dedede"
+    android:orientation="vertical"
     tools:context="bidding.example.com.bidding.Profile">
 
-    <ImageView
-        android:id="@+id/img_profile"
-        android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
-        android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"/>
 
 
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view_final_result"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp"
-            card_view:cardElevation="2dp"
-            card_view:cardUseCompatPadding="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:clickable="true">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:background="#fff"
+                android:layout_marginTop="@dimen/dashboard_menu">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -142,7 +131,6 @@
                         android:text="Edit"/>
                 </LinearLayout>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
 
 
-</RelativeLayout>
+</LinearLayout>
